--- a/myFirstWebApp/public/index.html
+++ b/myFirstWebApp/public/index.html
@@ -33,7 +33,7 @@
 			</span>
 		</div>
 		<div>
-			<button onclick='addLastName()'>Who?</button>
+			<button onclick="addLastName()">Who?</button>
 		</div>
 	</body>
 
